Fix layout issues in Uploaded Files Manager (#1300).

--- a/resources/less/components/media-manager.less
+++ b/resources/less/components/media-manager.less
@@ -23,7 +23,7 @@
         border: 1px solid #E2E2E2;
         float: left;
         list-style-type: none;
-        margin: 0 5px 10px;
+        margin: 0 5px 25px;
         width: 180px;
         padding: 3px;
         position: relative;
